# mol_opt_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  rubrics.py
server/: __init__.py  app.py  molopt_environment.py  sascorer.py
